fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,7 +27,6 @@
 
     body {
         margin: 0;
-        min-height: 100vh;
         background-color: var(--dark);
         color: white;
     }
